# skills

./: .gitignore  404.html  README.md  index.html  pyproject.toml
context/: index.html  v0.yamlld
docs/: .pages  index.md
docs/examples/types-of-ssds/form-factor-scheme/: index.md
docs/examples/types-of-ssds/interface-to-form-factor-mapping/: index.md
docs/examples/types-of-ssds/m2-keying-scheme/: signed.index.trig
examples/odyssey-2001/europa-is-a-satellite-of-jupiter/: index.html  signed.index.trig
overrides/: main.html
overrides/partials/: actions.html
publications/types-of-ssds/form-factor-scheme/: index.md
publications/types-of-ssds/interface-scheme/: index.md
publications/types-of-ssds/interface-to-form-factor-mapping/: signed.index.trig
search/: search_index.json
skills/create-knowledge-graph/: SKILL.md
skills/nanopublish/: SKILL.md  jeeves.py  signed.i.stableclass.trig
skills/semantify/: SKILL.md
